--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,15 +3,71 @@ project(codepad)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/modules")
 
+
 # options
+
+# plugin interface
 set(ENABLE_PLUGINS NO CACHE BOOL "Whether to generate and build the plugin interface.")
 set(APIGEN_PATH "./apigen" CACHE FILEPATH "Path to the apigen executable.")
+
+# graphics backend
+set(USE_CAIRO YES CACHE BOOL "Whether or not to include the Cairo graphics backend.")
 if(UNIX)
-	set(USE_GTK YES CACHE BOOL "Whether or not to use GTK on Linux")
+	set(USE_GTK YES CACHE BOOL "Whether or not to use GTK3 on Linux.")
 endif()
+
+# backtrace
+set(ENABLE_BACKTRACE YES CACHE BOOL "Whether or not to support printing backtraces.")
+
 
 # packages
 find_package(RapidJSON CONFIG REQUIRED)
+
+if(USE_CAIRO)
+	if(WIN32)
+		# on windows, manually find cairo since there's no pkgconfig
+		# https://github.com/Microsoft/vcpkg/issues/2563
+		find_library(CAIRO_LIB_DEBUG cairod)
+		find_library(CAIRO_LIB_RELEASE cairo)
+		# TODO are these necessary?
+		find_library(CAIRO_GOBJECT_LIB_DEBUG cairo-gobjectd)
+		find_library(CAIRO_GOBJECT_LIB_RELEASE cairo-gobject)
+
+		find_path(CAIRO_INCLUDE_DIRS cairo/cairo.h)
+
+		if(
+			CAIRO_LIB_DEBUG AND CAIRO_LIB_RELEASE AND
+			CAIRO_GOBJECT_LIB_DEBUG AND CAIRO_GOBJECT_LIB_RELEASE AND
+			CAIRO_INCLUDE_DIRS)
+
+			if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+				set(CAIRO_LIBRARIES "${CAIRO_LIB_DEBUG}")
+			else()
+				set(CAIRO_LIBRARIES "${CAIRO_LIB_RELEASE}")
+			endif()
+			set(Cairo_FOUND YES)
+		endif()
+	else()
+		find_package(Cairo)
+	endif()
+
+	if(Cairo_FOUND)
+		# export targets
+		if(NOT TARGET Cairo::Cairo)
+			add_library(Cairo::Cairo INTERFACE IMPORTED)
+
+			set_property(TARGET Cairo::Cairo PROPERTY INTERFACE_INCLUDE_DIRECTORIES ${CAIRO_INCLUDE_DIRS})
+			set_property(TARGET Cairo::Cairo PROPERTY INTERFACE_LINK_LIBRARIES ${CAIRO_LIBRARIES})
+		endif()
+
+		# TODO the cairo renderer depends on Pango for text shaping
+		# find_package(Pango REQUIRED)
+	else()
+		message("USE_CAIRO is set to true, but Cairo has not been found.")
+		set(USE_CAIRO NO)
+	endif()
+endif()
+
 if(UNIX)
 	find_package(Freetype REQUIRED)
 	find_package(Fontconfig REQUIRED)
@@ -21,6 +77,7 @@ if(UNIX)
 		find_package(X11 REQUIRED)
 	endif()
 endif()
+
 
 # source files
 set(SOURCE_PATH "${CMAKE_CURRENT_LIST_DIR}/codepad")
@@ -84,6 +141,7 @@ set(INTERPLATFORM_SOURCES
 	"${SOURCE_PATH}/ui/animation_path.h"
 	"${SOURCE_PATH}/ui/arrangements.cpp"
 	"${SOURCE_PATH}/ui/arrangements.h"
+	"${SOURCE_PATH}/ui/cairo_renderer_base.h"
 	"${SOURCE_PATH}/ui/commands.h"
 	"${SOURCE_PATH}/ui/common_elements.cpp"
 	"${SOURCE_PATH}/ui/common_elements.h"
@@ -103,13 +161,13 @@ set(INTERPLATFORM_SOURCES
 	"${SOURCE_PATH}/ui/renderer.cpp"
 	"${SOURCE_PATH}/ui/renderer.h"
 	"${SOURCE_PATH}/ui/scheduler.h"
-	"${SOURCE_PATH}/ui/text_rendering.h"
 	"${SOURCE_PATH}/ui/window.cpp"
 	"${SOURCE_PATH}/ui/window.h"
 
 	"${SOURCE_PATH}/main.cpp")
 
 set(WINDOWS_SOURCES
+	"${SOURCE_PATH}/os/windows/cairo_renderer.h"
 	"${SOURCE_PATH}/os/windows/direct2d_renderer.h"
 	"${SOURCE_PATH}/os/windows/filesystem.cpp"
 	"${SOURCE_PATH}/os/windows/misc.h"
@@ -119,11 +177,11 @@ set(WINDOWS_SOURCES
 
 set(UNIX_SOURCES
 	"${SOURCE_PATH}/os/linux/filesystem.cpp"
-	"${SOURCE_PATH}/os/linux/font.h"
+	"${SOURCE_PATH}/os/linux/linux.cpp"
 	"${SOURCE_PATH}/os/linux/misc.h"
-	"${SOURCE_PATH}/os/linux/renderer.h"
 	"${SOURCE_PATH}/os/linux/window.h"
 	"${SOURCE_PATH}/os/linux.h")
+
 
 # main executable
 add_executable(codepad)
@@ -131,26 +189,38 @@ add_executable(codepad)
 target_compile_features(codepad
 	PRIVATE cxx_std_17)
 target_sources(codepad
-	PRIVATE "${INTERPLATFORM_SOURCES}")
+	PRIVATE ${INTERPLATFORM_SOURCES})
 target_compile_definitions(codepad
-	PRIVATE UNICODE _UNICODE CP_LOG_STACKTRACE)
+	PRIVATE UNICODE _UNICODE)
+if(ENABLE_BACKTRACE)
+	target_compile_definitions(codepad
+		PRIVATE CP_LOG_STACKTRACE)
+endif()
+
 
 # set warning level
 if(MSVC)
 	target_compile_options(codepad
-		PRIVATE /W3)
+		PRIVATE /W4)
 elseif(CMAKE_COMPILER_IS_GNUCXX)
 	target_compile_options(codepad
 		PRIVATE -Wall -Wextra -Wconversion)
 endif()
 
+
 # libraries
 target_include_directories(codepad
-	PRIVATE "${RAPIDJSON_INCLUDE_DIRS}")
+	PRIVATE ${RAPIDJSON_INCLUDE_DIRS})
+if(USE_CAIRO)
+	target_compile_definitions(codepad
+		PRIVATE CP_USE_CAIRO)
+	target_link_libraries(codepad
+		PRIVATE Cairo::Cairo)
+endif()
 # platform dependent stuff
 if(WIN32)
 	target_sources(codepad
-		PRIVATE "${WINDOWS_SOURCES}")
+		PRIVATE ${WINDOWS_SOURCES})
 	target_compile_definitions(codepad
 		PRIVATE CP_PLATFORM_WINDOWS NOMINMAX OEMRESOURCE)
 	target_link_libraries(codepad
@@ -165,20 +235,23 @@ if(WIN32)
 	endif()
 elseif(UNIX)
 	target_sources(codepad
-		PRIVATE "${UNIX_SOURCES}")
+		PRIVATE ${UNIX_SOURCES})
 	target_compile_definitions(codepad
 		PRIVATE CP_PLATFORM_UNIX)
-	target_compile_options(codepad
-		PRIVATE -rdynamic)
 	target_link_libraries(codepad
-		PRIVATE Fontconfig::Fontconfig pthread) # TODO why link pthread?
+		PRIVATE pthread) # TODO why link pthread?
+	if(ENABLE_BACKTRACE)
+		target_link_options(codepad
+			PRIVATE -rdynamic) # enables detailed stacktrace
+	endif()
+
 	if(USE_GTK)
 		target_sources(codepad
 			PRIVATE
-				${SOURCE_PATH}/os/linux/gtk/linux.cpp
-				${SOURCE_PATH}/os/linux/gtk/misc.h
-				${SOURCE_PATH}/os/linux/gtk/renderer.h
-				${SOURCE_PATH}/os/linux/gtk/window.h)
+				"${SOURCE_PATH}/os/linux/gtk/cairo_renderer.h"
+				"${SOURCE_PATH}/os/linux/gtk/linux.cpp"
+				"${SOURCE_PATH}/os/linux/gtk/misc.h"
+				"${SOURCE_PATH}/os/linux/gtk/window.h")
 		target_compile_definitions(codepad
 			PRIVATE CP_USE_GTK)
 		target_link_libraries(codepad
@@ -186,10 +259,9 @@ elseif(UNIX)
 	else()
 		target_sources(codepad
 			PRIVATE
-				${SOURCE_PATH}/os/linux/x11/linux.cpp
-				${SOURCE_PATH}/os/linux/x11/misc.h
-				${SOURCE_PATH}/os/linux/x11/renderer.h
-				${SOURCE_PATH}/os/linux/x11/window.h)
+				"${SOURCE_PATH}/os/linux/x11/linux.cpp"
+				"${SOURCE_PATH}/os/linux/x11/misc.h"
+				"${SOURCE_PATH}/os/linux/x11/window.h")
 		target_link_libraries(codepad
 			PRIVATE ${X11_LIBRARIES})
 	endif()
@@ -201,6 +273,7 @@ if(CMAKE_COMPILER_IS_GNUCXX) # TODO rid of this after filesystem support is comp
 	target_link_libraries(codepad
 		PRIVATE stdc++fs)
 endif()
+
 
 # codegen
 if(${ENABLE_PLUGINS})
@@ -241,7 +314,7 @@ if(${ENABLE_PLUGINS})
 			${APIGEN_DEFINES}
 			${APIGEN_COMPILE_OPTIONS}
 			"${EXPORT_FILE_PATH}"
-		DEPENDS "${CODEPAD_SOURCES}" "${EXPORT_FILE_PATH}" "${APIGEN_PATH}"
+		DEPENDS ${CODEPAD_SOURCES} "${EXPORT_FILE_PATH}" "${APIGEN_PATH}"
 		COMMENT "Invoking apigen..."
 		VERBATIM)
 
