both text rendering approaches are now fully functional

--- a/codepad/config/settings.json
+++ b/codepad/config/settings.json
@@ -1,5 +1,6 @@
 {
-	"code_editor": {
+	"editor": {
+		"font_family": "Fira Code",
 		"interaction_modes": [
 			"prepare_drag",
 			"single_selection"
