font fallback, colored fonts for directwrite

--- a/codepad/config/settings.json
+++ b/codepad/config/settings.json
@@ -1,6 +1,12 @@
 {
 	"editor": {
+		"font_size": 12,
 		"font_family": "Fira Code",
+		"backup_fonts": [
+			"SimSun",
+			"MingLiu-ExtB",
+			"Segoe UI Emoji"
+		],
 		"interaction_modes": [
 			"prepare_drag",
 			"single_selection"
